# scanarstereo

./: .gitignore  PROJECT_LOG.md  convert_final_fix.py  master_fastdds_profile.xml  orchestrate_calibration.sh  start_recording.sh
calibration/: Dockerfile  Dockerfile_fastcalib  Initialization_result.txt  RUN_ME_ON_X86.txt  aprilgrid_10x8.yaml  camchain-imucam-datakalibr_fixed.yaml  camchain_guess.yaml  entrypoint.sh  fastcalib_target.yaml  imu-datakalibr_fixed.yaml  imu_uins3.yaml  li_init_config.yaml  results-imucam-datakalibr_fixed.txt  run_kalibr.sh
src/scanar_gui/: CMakeLists.txt  package.xml
src/scanar_gui/config/: oak_calibration.yaml
src/scanar_gui/include/scanar_gui/: mainwindow.h  ros_worker.h
src/scanar_gui/launch/: device1_master.launch.py  record_device1.launch.py  record_device1_with_qc.launch.py  scanar_v2.launch.py
src/scanar_gui/scripts/: data_quality_agent.py
src/scanar_gui/src/: main.cpp  mainwindow.cpp  ros_worker.cpp
src/uins3_driver/: CMakeLists.txt  package.xml
src/uins3_driver/config/: uins3.yaml
src/uins3_driver/launch/: uins3.launch.py
src/uins3_driver/src/: uins3_node.cpp
